tests/should_fail/type_tuple_void_element.nv
module type_tuple_none_element

import super.std.core

// Tuple elements must not be None/Void
fn make_void() {}

let bad_tuple = (make_void(), 42)
